# blog_app

./: Cargo.toml
migrations/: 20260328102251_create_mvp_v2.sql  20260328135500_pivot.sql  20260330200115_pivot_numba2_idontknowhowtonamethese.sql
src/: authextractor.rs  main.rs
src/routes/: create_account.rs  create_post.rs  get_messages.rs  get_posts.rs  like_post.rs  login.rs  mod.rs  send_message.rs
